--- a/client/src/components/TasksDashboard.css
+++ b/client/src/components/TasksDashboard.css
@@ -10,7 +10,7 @@ h3 {
 
 #dashboard > div > div {
   text-align: center;
-  background-color: rgb(236, 236, 236);
+  background-color: #EAECEE;
   height: 100vh;
 }
 
