--- a/client/src/components/TasksDashboard.css
+++ b/client/src/components/TasksDashboard.css
@@ -5,7 +5,6 @@ h3 {
 #dashboard > div {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 1.5rem;
 }
 
 #dashboard > div > div {
@@ -34,6 +33,7 @@ h3 {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 5px;
+
 }
 
 #task > div > p {
@@ -42,3 +42,10 @@ h3 {
   font-size: 1.2em;
   letter-spacing: 0.02em;
 }
+
+/* #task > div > input {
+  margin: 0;
+  padding: 0;
+  font-size: 1.2em;
+  letter-spacing: 0.02em;
+} */
