Handle onAdd and onSubmit

--- a/client/src/components/TasksDashboard.css
+++ b/client/src/components/TasksDashboard.css
@@ -51,7 +51,7 @@
 /* Task Input */
 
 #task > div > form > input {
-  width: 280px;
+  width: 85%;
   margin: 5px 0 0 0;
   padding: 5px 0 0 0;
   font-size: 1.2em;
