--- a/client/src/components/TasksDashboard.css
+++ b/client/src/components/TasksDashboard.css
@@ -12,7 +12,7 @@
 
 #dashboard > div > div {
   text-align: center;
-  background-color: #EAECEE;
+  background-color: #e0e2e4;
   height: 85vh;
   margin: 15px;
   border-radius: 5px;
