--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #ad0662;
+  /* background-color: #ad0662; */
+  /* background-color: #272727; */
+  background-color: #491849;
 }
 
 code {
