--- a/client/src/components/TasksDashboard.css
+++ b/client/src/components/TasksDashboard.css
@@ -6,7 +6,8 @@
 
 #dashboard > div {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   padding: 5px 10px 0;
 }
 
@@ -17,6 +18,10 @@
   margin: 15px;
   border-radius: 5px;
   overflow: scroll;
+}
+
+#dashboard > div > div > div {
+  min-height: 500px;
 }
 
 /* Task */
