--- a/client/src/TasksDashboard.css
+++ b/client/src/TasksDashboard.css
@@ -4,6 +4,21 @@
   font-size: 30px;
 }
 
+#dashboard > a {
+  color: #999;
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 600;
+  font-size: 25px;
+  position: absolute;
+  top: 5%;
+  right: 3%;
+}
+
+#dashboard > a:hover {
+  color: #EAECEE;
+}
+
 #dashboard > div {
   display: grid;
   /* grid-template-columns: 1fr 1fr 1fr; */
@@ -32,6 +47,7 @@
   width: 80%;
   margin: 15px auto 10px;
   border-radius: 5px;
+  border: 3px solid #4d4d4d;
   box-shadow: 0px 4px 6px -2px #808080c2;
 }
 
@@ -64,5 +80,12 @@
   outline: none;
 }
 
+.fa-times-circle {
+  color: #e6260d;
+}
+
+.fa-chevron-circle-down {
+  color: #46acdb;
+}
 
 
