--- a/client/src/TasksDashboard.css
+++ b/client/src/TasksDashboard.css
@@ -82,10 +82,36 @@
 
 .fa-times-circle {
   color: #e6260d;
+
 }
 
 .fa-chevron-circle-down {
   color: #46acdb;
+  /* animation-play-state: paused; */
 }
 
+.addButton {
+  color: #999;
+}
+
+.addButton:hover {
+  color: #fdfefe;
+}
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  transition-duration: 0.2s;
+  transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+  transform: scale(1.3);
+}
 
