--- a/client/src/TasksDashboard.css
+++ b/client/src/TasksDashboard.css
@@ -32,7 +32,7 @@
   height: 85vh;
   margin: 15px;
   border-radius: 5px;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 #dashboard > div > div > div {
