--- a/client/src/TasksDashboard.css
+++ b/client/src/TasksDashboard.css
@@ -1,117 +1,118 @@
 #dashboard > span {
-  display: inline-block;
-  padding: 20px 0 0 30px;
-  font-size: 30px;
+	display: inline-block;
+	padding: 20px 0 0 30px;
+	font-size: 30px;
 }
 
-#dashboard > a {
-  color: #999;
-  text-decoration: none;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 600;
-  font-size: 25px;
-  position: absolute;
-  top: 5%;
-  right: 3%;
+#dashboard > a,
+#temp-button {
+	color: #999;
+	text-decoration: none;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-weight: 600;
+	font-size: 25px;
+	position: absolute;
+	top: 5%;
+	right: 3%;
+	background-color: transparent;
+	border: none;
 }
 
-#dashboard > a:hover {
-  color: #EAECEE;
+#dashboard > a:hover,
+#temp-button:hover {
+	color: #eaecee;
 }
 
 #dashboard > div {
-  display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  padding: 5px 10px 0;
+	display: grid;
+	/* grid-template-columns: 1fr 1fr 1fr; */
+	grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+	padding: 5px 10px 0;
 }
 
 #dashboard > div > div {
-  text-align: center;
-  background-color: #e0e2e4;
-  height: 85vh;
-  margin: 15px;
-  border-radius: 5px;
-  overflow: hidden;
+	text-align: center;
+	background-color: #e0e2e4;
+	height: 85vh;
+	margin: 15px;
+	border-radius: 5px;
+	overflow: hidden;
 }
 
 #dashboard > div > div > div {
-  min-height: 500px;
+	min-height: 500px;
 }
 
 /* Task */
 
 #task {
-  background-color: #fff;
-  height: 70px;
-  width: 80%;
-  margin: 15px auto 10px;
-  border-radius: 5px;
-  border: 3px solid #4d4d4d;
-  box-shadow: 0px 4px 6px -2px #808080c2;
+	background-color: #fff;
+	height: 70px;
+	width: 80%;
+	margin: 15px auto 10px;
+	border-radius: 5px;
+	border: 3px solid #4d4d4d;
+	box-shadow: 0px 4px 6px -2px #808080c2;
 }
 
 #task > div:first-child {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
 }
 
 #task > div > span {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 5px;
 }
 
 #task > div > form > input {
-  width: 85%;
-  margin: 5px 0 0 0;
-  padding: 5px 0 0 0;
-  font-size: 1.2em;
-  letter-spacing: 0.02em;
-  text-align: center;
-  border: none;
-  border-radius: 5px;
+	width: 85%;
+	margin: 5px 0 0 0;
+	padding: 5px 0 0 0;
+	font-size: 1.2em;
+	letter-spacing: 0.02em;
+	text-align: center;
+	border: none;
+	border-radius: 5px;
 }
 
 #task > div > form > input:focus {
-  background-color: #EAECEE;
-  outline: none;
+	background-color: #eaecee;
+	outline: none;
 }
 
 .fa-times-circle {
-  color: #e6260d;
-
+	color: #e6260d;
 }
 
 .fa-chevron-circle-down {
-  color: #46acdb;
-  /* animation-play-state: paused; */
+	color: #46acdb;
+	/* animation-play-state: paused; */
 }
 
 .addButton {
-  color: #999;
+	color: #999;
 }
 
 .addButton:hover {
-  color: #fdfefe;
+	color: #fdfefe;
 }
 
 .hvr-grow {
-  display: inline-block;
-  vertical-align: middle;
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  transition-duration: 0.2s;
-  transition-property: transform;
+	display: inline-block;
+	vertical-align: middle;
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	transition-duration: 0.2s;
+	transition-property: transform;
 }
 
 .hvr-grow:hover,
 .hvr-grow:focus,
 .hvr-grow:active {
-  transform: scale(1.3);
+	transform: scale(1.3);
 }
-
